--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -108,6 +108,7 @@ section {
 
 html {
   touch-action: manipulation;
+  height: 100%;
 }
 
 body {
@@ -123,6 +124,7 @@ body {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   overflow: hidden;
+  height: 100%;
 }
 
 ol,
