--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,22 +1,32 @@
 @import "layout";
 
-
 .chess {
-  background: #babaf0;
-  width: 100%;
-  max-width: 800px;
-  height: 800px;
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
+    display: grid;
+    grid-template-columns: repeat(8,1fr);
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    max-height: 800px;
+    min-height: 400px;
+    min-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
 
-
-
+    background:#7c3f00;
+    border: 2px solid #633200;
+    font-family: sans-serif;
+    
   div {
     border: 1px solid white;
     background-repeat: no-repeat;
   }
 
   .selected{
+    box-shadow: inset 3px 3px 20px #692020;
+  }
+
+  .valid{
     box-shadow: inset 3px 3px 20px black;
   }
 }
