--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,20 +6,20 @@
     width: 100%;
     height: 100%;
     max-width: 800px;
-    max-height: 800px;
+    max-height: 860px;
     min-height: 400px;
     min-width: 400px;
     margin: 0 auto;
     padding: 20px;
     box-sizing: border-box;
-
     background:#7c3f00;
     border: 2px solid #633200;
     font-family: sans-serif;
-    
+
   div {
     border: 1px solid white;
     background-repeat: no-repeat;
+    height: 100px;
   }
 
   .selected{
