--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,28 +5,27 @@
     grid-template-columns: repeat(8,1fr);
     width: 100%;
     height: 100%;
-    max-width: 800px;
+    max-width: 860px;
     max-height: 860px;
     min-height: 400px;
     min-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
+    margin: 40px auto;
+    padding: 30px;
     box-sizing: border-box;
-    background:#7c3f00;
-    border: 2px solid #633200;
+    background: #a5a5a5;
     font-family: sans-serif;
 
   div {
-    border: 1px solid white;
     background-repeat: no-repeat;
     height: 100px;
+    width: 100px;
   }
 
   .selected{
-    box-shadow: inset 3px 3px 20px #692020;
+    box-shadow: inset 0px 0px 0px 4px #2f9284;
   }
 
   .valid{
-    box-shadow: inset 3px 3px 20px black;
+    box-shadow: inset -1px 1px 60px 0px #287167;
   }
 }
